--- a/lab04/configs/spine-01.cfg
+++ b/lab04/configs/spine-01.cfg
@@ -11,6 +11,7 @@ router bgp 65000
    maximum-paths 4 ecmp 4
    neighbor LEAF peer group
    neighbor LEAF bfd
+   neighbor LEAF timers 3 9
    ! Leaf-01
    neighbor 10.101.1.0 peer group LEAF
    neighbor 10.101.1.0 remote-as 65001
