--- a/lab04/configs/leaf-03.cfg
+++ b/lab04/configs/leaf-03.cfg
@@ -11,6 +11,7 @@ router bgp 65003
    maximum-paths 2 ecmp 2
    neighbor SPINE peer group
    neighbor SPINE bfd
+   neighbor SPINE timers 3 9
    ! Spine-01
    neighbor 10.101.1.5 peer group SPINE
    neighbor 10.101.1.5 remote-as 65000
