add more detailts and vlan 30

--- a/lab05/configs/leaf-01.cfg
+++ b/lab05/configs/leaf-01.cfg
@@ -13,12 +13,16 @@ vlan 10
 vlan 20
    name VLAN20
 !
+vlan 30
+   name VLAN30
+!
 ! VxLAN interface
 interface Vxlan1
    vxlan source-interface Loopback0
    vxlan udp-port 4789
    vxlan vlan 10 vni 10010
    vxlan vlan 20 vni 10020
+   vxlan vlan 30 vni 10030
    vxlan learn-restrict any
 !
 ! eBGP configuration with EVPN
@@ -46,6 +50,11 @@ router bgp 65001
    vlan 20
       rd 10.1.1.1:10020
       route-target both 20:10020
+      redistribute learned
+   !
+   vlan 30
+      rd 10.1.1.1:10030
+      route-target both 30:10030
       redistribute learned
    !
    address-family ipv4
