--- a/lab05/configs/leaf-04.cfg
+++ b/lab05/configs/leaf-04.cfg
@@ -13,12 +13,16 @@ vlan 10
 vlan 20
    name VLAN20
 !
+vlan 30
+   name VLAN30
+!
 ! VxLAN interface
 interface Vxlan1
    vxlan source-interface Loopback0
    vxlan udp-port 4789
    vxlan vlan 10 vni 10010
    vxlan vlan 20 vni 10020
+   vxlan vlan 30 vni 10030
    vxlan learn-restrict any
 !
 ! eBGP configuration with EVPN
@@ -48,6 +52,11 @@ router bgp 65004
       route-target both 20:10020
       redistribute learned
    !
+   vlan 30
+      rd 10.1.1.4:10030
+      route-target both 30:10030
+      redistribute learned
+   !
    address-family ipv4
       neighbor SPINE activate
       network 10.1.1.4/32
@@ -71,7 +80,7 @@ interface Ethernet3
 !
 interface Ethernet4
    description Link to VPC20
-   switchport access vlan 20
+   switchport access vlan 30
 !
 interface Loopback0
    description Router-ID / VTEP
